examples/test/testpolicy9993.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9993
  namespace: namespace427
spec:
  podSelector:
    matchLabels:
      key7: value0
      key9: value36
      key39: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value42
          key40: value37
      podSelector:
        matchLabels:
          key4: value28
